<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/constraint_layout"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:text="@string/time"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtFoodStatus"
        app:layout_constraintStart_toEndOf="@+id/txtDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtFoodStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="86dp"
        android:text="@string/before_food"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtGlucoseValue"
        app:layout_constraintStart_toEndOf="@+id/txtTime"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtGlucoseValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/glucose_reading"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>